ver201604template.sdk/.metadata/.plugins/org.eclipse.cdt.ui/wind_time_test.build.log
21:17:03 **** Auto Build of configuration Debug for project wind_time_test ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/main.cpp'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../wind_time_test_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
../src/main.cpp: In function 'int main()':
../src/main.cpp:9:2: error: 'cout' was not declared in this scope
  cout >> this is a >>;
  ^
../src/main.cpp:9:2: note: suggested alternative:
In file included from ../src/main.cpp:5:0:
c:\xilinx\sdk\2016.4\gnu\aarch32\nt\gcc-arm-none-eabi\arm-none-eabi\include\c++\5.2.1\iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
../src/main.cpp:9:10: error: invalid use of 'this' in non-member function
  cout >> this is a >>;
          ^
make: *** [src/main.o] Error 1

21:17:04 Build Finished (took 599ms)

